# masterclass-ap

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
agent_sidecar/: .dockerignore  Dockerfile  README.md  __init__.py  env.example  intent_mappings.py  main.py  query_mappings.yaml  requirements.txt
configs/: secdist.json  static_config.yaml
frontend/: README.md  pubspec.yaml
frontend/android/: key.properties.example  settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/xml/: network_security_config.xml
frontend/lib/: main.dart
frontend/lib/src/: app.dart
frontend/lib/src/core/: analytics.dart  api_base_url_io.dart  api_base_url_stub.dart  api_client.dart  app_assets.dart  session_storage.dart  strings.dart
frontend/lib/src/core/providers/: favorites_provider.dart
frontend/lib/src/core/utils/: date_formatter.dart  phone_normalize.dart  ru_phone_input_formatter.dart
frontend/lib/src/core/widgets/: labeled_svg_button.dart
frontend/lib/src/features/auth/data/: auth_service.dart
frontend/lib/src/features/auth/presentation/screens/: auth_gate_screen.dart  login_screen.dart  register_screen.dart  start_screen.dart  tutorial_screen.dart
frontend/lib/src/features/auth/presentation/widgets/: auth_rounded_field.dart
frontend/lib/src/features/chat/: chat_state.dart
frontend/lib/src/features/chat/data/: chat_service.dart
frontend/lib/src/features/chat/presentation/screens/: chat_screen.dart
frontend/lib/src/features/masterclasses/data/: masterclass_service.dart
frontend/lib/src/features/masterclasses/domain/: masterclass.dart
frontend/lib/src/features/masterclasses/presentation/screens/: feed_screen.dart  masterclass_details_screen.dart
frontend/lib/src/features/navigation/presentation/: scaffold_with_navbar.dart
frontend/lib/src/features/profile/data/: profile_service.dart
frontend/lib/src/features/profile/domain/: user_profile.dart
scripts/: build_android_aab.sh  build_android_apk.sh  build_ios.sh  docker-backend-entrypoint.sh  download_images.py  import_data.py  load_masterclasses_and_images.sh  run_agent_sidecar.sh  run_backend.sh  setup_android_sdk.sh  setup_ios_platform.sh
scripts/db/: init.sql  masterclasses.sql  users.sql
src/: main.cpp
src/handlers/: auth_login_handler.cpp  auth_login_handler.hpp  auth_register_handler.cpp  auth_register_handler.hpp  mc_add_bulk_handler.cpp  mc_add_bulk_handler.hpp  mc_add_handler.cpp  mc_add_handler.hpp  mc_delete_handler.cpp  mc_delete_handler.hpp  mc_list_handler.cpp  mc_list_handler.hpp  ping_handler.cpp  ping_handler.hpp  static_image_handler.cpp  static_image_handler.hpp  user_add_handler.cpp  user_add_handler.hpp  user_delete_handler.cpp  user_delete_handler.hpp  user_favorites_handler.cpp  user_favorites_handler.hpp  user_profile_handler.cpp  user_profile_handler.hpp
src/sql/: delete_favorite.sql  delete_masterclass.sql  delete_user_requests.sql  exists_user_by_phone.sql  insert_favorite.sql  insert_masterclass.sql  insert_masterclass_bulk.sql  insert_user.sql  queries.hpp.in  select_favorites.sql  select_masterclasses_by_ids.sql  select_masterclasses_filtered.sql  select_masterclasses_filtered_date_asc.sql  select_masterclasses_filtered_date_desc.sql  select_user_by_phone.sql  select_user_profile.sql
src/utils/: phone.cpp  phone.hpp
(+9 files in other folders)
